--- a/backend/package.json
+++ b/backend/package.json
@@ -14,5 +14,8 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mongoose": "^5.9.16"
+  },
+  "devDependencies": {
+    "node-restful": "^0.2.6"
   }
 }
