--- a/front-end/package.json
+++ b/front-end/package.json
@@ -26,13 +26,15 @@
     },
     "dependencies": {
         "axios": "^0.19.2",
-        "jquery": "^3.5.1",
-        "popper.js": "^1.16.1",
         "bootstrap": "^4.5.0",
         "file-loader": "^6.0.0",
+        "final-form": "^4.20.0",
         "font-awesome": "^4.7.0",
+        "jquery": "^3.5.1",
+        "popper.js": "^1.16.1",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
+        "react-final-form": "^6.5.0",
         "react-redux": "^7.2.0",
         "react-router-dom": "^5.2.0",
         "redux": "^4.0.5",
